--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "body-parser": "^1.19.0",
     "crypto": "^1.0.1",
     "express": "^4.17.1",
-    "mongoose": "^5.6.9"
+    "express-handlebars": "^3.1.0",
+    "mongoose": "^5.6.9",
+    "multer": "^1.4.2"
   },
   "devDependencies": {
     "nodemon": "^1.19.1"
