--- a/package.json
+++ b/package.json
@@ -20,9 +20,14 @@
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.19.0",
     "crypto": "^1.0.1",
+    "errorhandler": "^1.5.1",
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
+    "fs-extra": "^8.1.0",
+    "md5": "^2.2.1",
+    "moment": "^2.24.0",
     "mongoose": "^5.6.9",
+    "morgan": "^1.9.1",
     "multer": "^1.4.2"
   },
   "devDependencies": {
