--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "moment": "^2.24.0",
     "mongoose": "^5.6.9",
     "morgan": "^1.9.1",
-    "multer": "^1.4.2"
+    "multer": "^1.4.2",
+    "pug": "^2.0.4"
   },
   "devDependencies": {
     "nodemon": "^1.19.1"
