--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "crypto": "^1.0.1",
     "errorhandler": "^1.5.1",
     "express": "^4.17.1",
+    "express-formidable": "^1.2.0",
     "express-handlebars": "^3.1.0",
     "fs-extra": "^8.1.0",
     "highlight.js": "^9.15.10",
