--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.19.0",
     "crypto": "^1.0.1",
+    "debug": "^4.1.1",
+    "ejs": "^2.7.1",
     "errorhandler": "^1.5.1",
     "express": "^4.17.1",
     "express-formidable": "^1.2.0",
