--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/Hector-Josue7/Magento#readme",
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "crypto": "^1.0.1",
     "debug": "^4.1.1",
@@ -25,15 +26,16 @@
     "errorhandler": "^1.5.1",
     "express": "^4.17.1",
     "express-formidable": "^1.2.0",
-    "express-handlebars": "^3.1.0",
+    "express-session": "^1.16.2",
     "fs-extra": "^8.1.0",
-    "highlight.js": "^9.15.10",
     "md5": "^2.2.1",
     "moment": "^2.24.0",
     "mongoose": "^5.6.9",
     "morgan": "^1.9.1",
     "multer": "^1.4.2",
-    "pug": "^2.0.4"
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
+    "sweetalert2": "^8.17.6"
   },
   "devDependencies": {
     "nodemon": "^1.19.1"
