--- a/package.json
+++ b/package.json
@@ -20,14 +20,20 @@
     "bcrypt-nodejs": "0.0.3",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.4",
     "crypto": "^1.0.1",
     "debug": "^4.1.1",
     "ejs": "^2.7.1",
     "errorhandler": "^1.5.1",
     "express": "^4.17.1",
     "express-formidable": "^1.2.0",
+    "express-handlebars": "^3.1.0",
+    "express-promise-router": "^3.0.3",
     "express-session": "^1.16.2",
     "fs-extra": "^8.1.0",
+    "joi": "^14.3.1",
+    "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.15",
     "md5": "^2.2.1",
     "moment": "^2.24.0",
     "mongoose": "^5.6.9",
@@ -35,9 +41,15 @@
     "multer": "^1.4.2",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
+    "path": "^0.12.7",
+    "serve-favicon": "^2.5.0",
+    "static-favicon": "^2.0.0-alpha",
     "sweetalert2": "^8.17.6"
   },
   "devDependencies": {
-    "nodemon": "^1.19.1"
+    "mocha": "^6.2.0",
+    "nodemon": "^1.19.1",
+    "should": "^13.2.3",
+    "supertest": "^4.0.2"
   }
 }
