--- a/package.json
+++ b/package.json
@@ -26,10 +26,11 @@
     "ejs": "^2.7.1",
     "errorhandler": "^1.5.1",
     "express": "^4.17.1",
+    "express-fileupload": "^1.1.6-alpha.5",
     "express-formidable": "^1.2.0",
-    "express-handlebars": "^3.1.0",
     "express-promise-router": "^3.0.3",
     "express-session": "^1.16.2",
+    "express-validator": "^6.2.0",
     "fs-extra": "^8.1.0",
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.5.1",
